--- a/assetts/css/style.css
+++ b/assetts/css/style.css
@@ -13,3 +13,42 @@ transform:rotate(90deg);
 
     /* this should rotate my image 90 degrees */
 }
+.morelinks{
+
+}
+.mainbody{
+
+}
+.box{
+border: 2px solid green;
+color: brown;
+background-color: grey;
+height: 120px;
+width: 120px;
+}
+
+footer{
+
+}
+
+
+
+
+/* ### Additional Specifcations
+
+1. Colors _Pro-tip: Use the [Eye Dropper](https://chrome.google.com/webstore/detail/eye-dropper/hmdcmlfkchdmnmnmheododdhjedfccka) Chrome extension to find the colors used on web pages._
+   * Teal color (used for headings and backgrounds): `#4aaaa5`
+   * Regular font color (used for paragraphs and all text besides the headings): `#777777`
+   * Main header background color: `#ffffff`
+   * Main header border color: `#cccccc`
+   * Footer background color: `#666666`
+   * Main content background color: `#ffffff`
+   * Main content border color: `#dddddd`
+
+2. Fonts:
+   * For heading fonts use `font-family: 'Georgia', Times, Times New Roman, serif;`.
+   * For all other fonts use `'Arial', 'Helvetica Neue', Helvetica, sans-serif;`.
+
+3. Profile Image Found on `index.html`:
+   * Use a picture of yourself.
+   * If you don't have a picture, you can grab a placeholder image from [LoremPixel](http://lorempixel.com/). Save the images to your `images` folder. */
