fixed typo that commented out code

--- a/assetts/css/style.css
+++ b/assetts/css/style.css
@@ -36,7 +36,7 @@ h1{                     /*reserved for my name*/
     border-width: 1px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     /* margin-bottom: 25px; */
-    margin-bottom: 0px;         /*victory!/*
+    margin-bottom: 0px;         /*victory!*/
 
 }
 h2{
